头条推荐码修改 点淘双11活动-抽奖

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,16 +12,16 @@
     <string name="diantao_describe">第一步：下载点淘App,用户登录\n第二步：进入我的-元宝中心-下滑找到邀请码填写：LRHN7T5O\n第三步：提交成功得现金奖励！</string>
     <string name="kuaishou_describe">第一步：下载快手极速版App,用户登录\n第二步：点击金蛋进入任务中心,下滑找到邀请码填写：446859698\n第三步：提交成功得现金奖励！</string>
     <string name="douyin_describe">第一步：下载抖音极速版App,用户登录\n第二步：点击红包进入赚钱任务,下滑找到邀请码填写：8161779848\n第三步：提交成功得现金奖励！</string>
-    <string name="toutiao_describe">第一步：下载头条极速版App,用户登录\n第二步：进入赚钱任务,下滑找到邀请码填写：1634396786\n第三步：提交成功得现金奖励！</string>
+    <string name="toutiao_describe">第一步：下载头条极速版App,用户登录\n第二步：进入赚钱任务,下滑找到邀请码填写：Q38842766\n第三步：提交成功得现金奖励！</string>
     <string name="aiqiyi_describe">第一步：下载爱奇艺极速版App,用户登录\n第二步：进入赚钱任务,下滑找到邀请码填写：2883663620\n第三步：提交成功得现金奖励！</string>
     <string name="baidu_describe">第一步：下载百度极速版App,用户登录\n第二步：进入赚钱任务,下滑找到邀请码填写：1511568276638\n第三步：提交成功得现金奖励！</string>
 
-    <string name="toutiao_detail">头条极速版任务攻略:\n1.建议每天任务时常4小时，超过4小时奖励收益下降明显。\n2.新手期奖励丰厚，部分机型可通过卸载重装头条极速版app来刷新新手奖励(安装时把头条读取手机权限给禁止了)。</string>
-    <string name="douyin_detail">抖音极速版任务攻略:\n1.建议每天任务时常2小时，超过2小时奖励收益下降明显。\n2.新手期奖励丰厚，部分机型可通过卸载重装抖音极速版app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
-    <string name="kuaishou_detail">快手极速版任务攻略:\n1.建议每天任务时常4小时，超过4小时奖励收益下降明显。\n2.新手期奖励丰厚，部分机型可通过卸载重装快手极速版app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
-    <string name="diantao_detail">点淘任务攻略:\n1.建议每天任务时常2小时，超过2小时奖励收益下降明显。\n2.新手期奖励丰厚，部分机型可通过卸载重装点淘app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
-    <string name="aiqiyi_detail">爱奇艺极速版任务攻略:\n1.建议每天任务时常2小时，超过2小时奖励收益下降明显。\n2.新手期奖励丰厚，部分机型可通过卸载爱奇艺极速版app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
-    <string name="baidu_detail">百度极速版任务攻略:\n1.建议每天任务时常4小时，超过4小时奖励收益下降明显。\n2.新手期奖励丰厚，部分机型可通过卸载重装百度极速版app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
+    <string name="toutiao_detail">头条极速版任务攻略:\n1.任务推荐指数：五颗星，过新手期后预计稳定收入1到2元。\n2.新手期奖励丰厚，部分机型可通过卸载重装头条极速版app来刷新新手奖励(安装时把头条读取手机权限给禁止了)。</string>
+    <string name="douyin_detail">抖音极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1元。\n2.新手期奖励丰厚，部分机型可通过卸载重装抖音极速版app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
+    <string name="kuaishou_detail">快手极速版任务攻略:\n1.任务推荐指数：三颗星，过新手期后预计稳定收入1元。\n2.新手期奖励丰厚，部分机型可通过卸载重装快手极速版app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
+    <string name="diantao_detail">点淘任务攻略:\n1.任务推荐指数：五颗星，过新手期后预计稳定收入1到2元。\n2.新手期奖励丰厚，部分机型可通过卸载重装点淘app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
+    <string name="aiqiyi_detail">爱奇艺极速版任务攻略:\n1.任务推荐指数：两颗星，过新手期后预计稳定收入0.5到1元。\n2.新手期奖励丰厚，部分机型可通过卸载爱奇艺极速版app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
+    <string name="baidu_detail">百度极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1到2元。\n2.新手期奖励丰厚，部分机型可通过卸载重装百度极速版app来刷新新手奖励(安装时把软件权限给禁止了)。</string>
 
 </resources>
 
