新增抖音火山版和番茄畅听脚本 其它脚本优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,18 +16,20 @@
     <string name="aiqiyi_describe">第一步：根据提示下载安装爱奇艺极速版App\n第二步：登录爱奇艺极速版App\n第三步：捡豆子App启动任务(确保无障碍权限已开启)</string>
     <string name="baidu_describe">第一步：根据提示下载安装百度极速版App\n第二步：登录百度极速版App\n第三步：捡豆子App启动任务(确保无障碍权限已开启)</string>
     <string name="huoshan_describe">第一步：根据提示下载安装抖音火山极速版App\n第二步：登录抖音火山极速版App\n第三步：捡豆子App启动任务(确保无障碍权限已开启)</string>
+    <string name="fanqie_describe">第一步：根据提示下载安装番茄畅听App\n第二步：登录番茄畅听App\n第三步：捡豆子App启动任务(确保无障碍权限已开启)</string>
     <string name="jingdong_describe">第一步：根据提示下载安装京东极速版App\n第二步：登录京东极速版App\n第三步：捡豆子App启动任务(确保无障碍权限已开启)</string>
     <string name="meitianzhuandian_describe">第一步：根据提示下载安装每天赚点App\n第二步：登录每天赚点App\n第三步：下载并登录小红书和淘宝App(要刷这两个app的任务)，捡豆子App启动任务(确保无障碍权限已开启)</string>
 
-    <string name="toutiao_detail">头条极速版任务攻略:\n1.任务推荐指数：五颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，可加群获取如何一直刷新手任务方法。</string>
-    <string name="douyin_detail">抖音极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1元。\n2.推荐码:%1$s，可加群获取如何一直刷新手任务方法。</string>
-    <string name="kuaishou_detail">快手极速版任务攻略:\n1.任务推荐指数：三颗星，过新手期后预计稳定收入1元。\n2.推荐码:%1$s，可加群获取如何一直刷新手任务方法。</string>
-    <string name="diantao_detail">点淘任务攻略:\n1.任务推荐指数：五颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，可加群获取如何一直刷新手任务方法。</string>
-    <string name="aiqiyi_detail">爱奇艺极速版任务攻略:\n1.任务推荐指数：两颗星，过新手期后预计稳定收入0.5到1元。\n2.推荐码:%1$s，可加群获取如何一直刷新手任务方法。</string>
-    <string name="baidu_detail">百度极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，可加群获取如何一直刷新手任务方法。</string>
-    <string name="huoshan_detail">抖音火山极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，可加群获取如何一直刷新手任务方法。</string>
-    <string name="jingdong_detail">京东极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，可加群获取如何一直刷新手任务方法。</string>
-    <string name="meitianzhuandian_detail">每天赚点任务攻略:\n1.任务推荐指数：五颗星，强烈推荐，稳定收入3到10元。\n2.该脚本还需要同时下载和登录小红书和淘宝APP。\n3.推荐码:%1$s，填上邀请码，就是对我的鼓励，谢谢！</string>
+    <string name="toutiao_detail">头条极速版任务攻略:\n1.任务推荐指数：五颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！。</string>
+    <string name="douyin_detail">抖音极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1元。\n2.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！。</string>
+    <string name="kuaishou_detail">快手极速版任务攻略:\n1.任务推荐指数：三颗星，过新手期后预计稳定收入1元。\n2.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！。</string>
+    <string name="diantao_detail">点淘任务攻略:\n1.任务推荐指数：五颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！。</string>
+    <string name="aiqiyi_detail">爱奇艺极速版任务攻略:\n1.任务推荐指数：两颗星，过新手期后预计稳定收入0.5到1元。\n2.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！。</string>
+    <string name="baidu_detail">百度极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！。</string>
+    <string name="huoshan_detail">抖音火山极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！。</string>
+    <string name="fanqie_detail">番茄畅听任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！。</string>
+    <string name="jingdong_detail">京东极速版任务攻略:\n1.任务推荐指数：四颗星，过新手期后预计稳定收入1到2元。\n2.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！。</string>
+    <string name="meitianzhuandian_detail">每天赚点任务攻略:\n1.任务推荐指数：三颗星，预计收入1到2元。\n2.该脚本还需要同时下载和登录小红书和淘宝APP。\n3.推荐码:%1$s，填上邀请码，就是对作者的鼓励，谢谢！</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
